[gd_scene load_steps=4 format=3 uid="uid://surface_001"]

[ext_resource type="Script" path="res://scripts/surface.gd" id="1_surface"]
[ext_resource type="PackedScene" uid="uid://shop_building_001" path="res://scenes/surface/shop_building.tscn" id="2_shop_building"]
[ext_resource type="PackedScene" uid="uid://mine_entrance_001" path="res://scenes/surface/mine_entrance.tscn" id="3_mine_entrance"]

[node name="Surface" type="Node2D"]
script = ExtResource("1_surface")

[node name="Sky" type="ColorRect" parent="."]
offset_left = -5000.0
offset_top = 0.0
offset_right = 5000.0
offset_bottom = 768.0
color = Color(0.98, 0.85, 0.65, 1)
metadata/_edit_lock_ = true

[node name="Ground" type="ColorRect" parent="."]
offset_left = -5000.0
offset_top = 768.0
offset_right = 5000.0
offset_bottom = 896.0
color = Color(0.55, 0.72, 0.38, 1)
metadata/_edit_lock_ = true

[node name="SpawnPoint" type="Marker2D" parent="."]
position = Vector2(512, 768)
gizmo_extents = 64.0

[node name="ShopBuilding" parent="." instance=ExtResource("2_shop_building")]
position = Vector2(128, 576)

[node name="MineEntrance" parent="." instance=ExtResource("3_mine_entrance")]
position = Vector2(640, 768)
